fixed spacing, adjusted pickaxe health, fixed bugs with gold and xp

--- a/css/style.css
+++ b/css/style.css
@@ -141,3 +141,6 @@ a{
     color:white;
     text-decoration: none;
 }
+#armor, #weapons{
+    padding-top:5px;
+}
